<resources>
    <string name="app_name">画面部品サンプル</string>
    <string name="tv_msg">お名前を入力してください</string>
    <string name="bt_save">保存</string>
    <string name="cd_food">フード</string>
    <string name="cd_drink">ドリンク</string>
    <string name="rbFemale">女性</string>
    <string name="rbMale">男性</string>
    <string-array name="sp_curryList">
        <item>メニュー表</item>
        <item>ドライカレー</item>
        <item>カツカレー</item>
        <item>ビーフカレー</item>
        <item>チキンカレー</item>
        <item>シーフードカレー</item>
        <item>キーマカレー</item>
        <item>グリーンカレー</item>
    </string-array>
    <string-array name="lv_cocktaillist">
        <item>ホワイトレディー</item>
        <item>バラライカ</item>
        <item>XYZ</item>
        <item>ニューヨーク</item>
        <item>マンハッタン</item>
        <item>ミシシッピミュール</item>
        <item>ブルーハワイ</item>
        <item>ワイキキ</item>
        <item>デトロイト</item>
        <item>コンドラチェフ</item>
        <item>ミシガン</item>
        <item>ボストン</item>
        <item>ケトプロフェン</item>
        <item>アドバイザー</item>
    </string-array>
</resources>